# block_bot

./: Dockerfile  app.py  bot.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 038b462e2da3_init.py
config/: .env.example
src/: app.py  states.py
src/api/tg/: tg.py
src/config/: .env.example  settings.py
src/crypto/: app.py
src/handlers/: __init__.py  router.py  rules.py  start.py  support.py
src/handlers/profile/: __init__.py  profile.py  select_subscription.py
src/keyboards/: follow_channel_keyboard.py  main_menu.py  profile_keyboard.py  subscription_select_keyboard.py
src/middlewares/: check_channel.py
src/storage/: database.py  user_utils.py
src/storage/models/: __init__.py  user.py
